implementing interface, updated README, added a default reference .env file

--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-/APIs/token.pickle
-/APIs/credentials.json
-/APIs/
-./APIs/credentials.json
+/API Data/token.pickle
+/API Data/credentials.json
+/API Data/
+API Data/credentials.json
 .env
